// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ SimpleIconDropdown Default Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "6rem",
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Icon
      </label>
      <div
        className="bx--dropdown iot--icon-dropdown bx--list-box"
        id="mySimpleIconDropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          title={
            <div
              className="iot--icon-dropdown__item"
              style={
                Object {
                  "color": "unset",
                }
              }
            >
              <div
                className="iot--icon-dropdown__item-border"
              >
                <ForwardRef(Checkmark24) />
              </div>
            </div>
          }
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            <div
              className="iot--icon-dropdown__item"
              style={
                Object {
                  "color": "unset",
                }
              }
            >
              <div
                className="iot--icon-dropdown__item-border"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={24}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 15.9L4.7 10.6 3.6 11.6 8.9 16.9 10 18 20.6 7.4 19.5 6.3z"
                  />
                </svg>
              </div>
            </div>
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-label="Open menu"
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title>
                Open menu
              </title>
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ SimpleIconDropdown With Defined Icon Colors 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "6rem",
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Icon
      </label>
      <div
        className="bx--dropdown iot--icon-dropdown bx--list-box"
        id="mySimpleIconDropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          title={
            <div
              className="iot--icon-dropdown__item"
              style={
                Object {
                  "color": "red",
                }
              }
            >
              <div
                className="iot--icon-dropdown__item-border"
              >
                <ForwardRef(ErrorOutline24) />
              </div>
            </div>
          }
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            <div
              className="iot--icon-dropdown__item"
              style={
                Object {
                  "color": "red",
                }
              }
            >
              <div
                className="iot--icon-dropdown__item-border"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={24}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.9 7.2H17.1V24.799H14.9z"
                    transform="rotate(-45 16 16)"
                  />
                  <path
                    d="M16,2A13.9138,13.9138,0,0,0,2,16,13.9138,13.9138,0,0,0,16,30,13.9138,13.9138,0,0,0,30,16,13.9138,13.9138,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12.0353,12.0353,0,0,1,16,28Z"
                  />
                </svg>
              </div>
            </div>
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-label="Open menu"
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title>
                Open menu
              </title>
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ SimpleIconDropdown With Selected Icon 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "6rem",
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Icon
      </label>
      <div
        className="bx--dropdown iot--icon-dropdown bx--list-box"
        id="mySimpleIconDropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          title={
            <div
              className="iot--icon-dropdown__item"
              style={
                Object {
                  "color": "unset",
                }
              }
            >
              <div
                className="iot--icon-dropdown__item-border"
              >
                <ForwardRef(Information24) />
              </div>
            </div>
          }
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            <div
              className="iot--icon-dropdown__item"
              style={
                Object {
                  "color": "unset",
                }
              }
            >
              <div
                className="iot--icon-dropdown__item-border"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={24}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                  />
                  <path
                    d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                  />
                </svg>
              </div>
            </div>
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-label="Open menu"
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title>
                Open menu
              </title>
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ SimpleIconDropdown ️⚠️ Experimental Notice  1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--toast-notification bx--toast-notification--warning-alt"
    kind="warning-alt"
    role="alert"
    style={
      Object {
        "marginBottom": "0.5rem",
        "minWidth": "30rem",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="bx--toast-notification__icon"
      fill="currentColor"
      focusable="false"
      height={20}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 32 32"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16,26a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,26Zm-1.125-5h2.25V12h-2.25Z"
        data-icon-path="inner-path"
        fill="none"
      />
      <path
        d="M16.002,6.1714h-.004L4.6487,27.9966,4.6506,28H27.3494l.0019-.0034ZM14.875,12h2.25v9h-2.25ZM16,26a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,26Z"
      />
      <path
        d="M29,30H3a1,1,0,0,1-.8872-1.4614l13-25a1,1,0,0,1,1.7744,0l13,25A1,1,0,0,1,29,30ZM4.6507,28H27.3493l.002-.0033L16.002,6.1714h-.004L4.6487,27.9967Z"
      />
      <title>
        warning-alt icon
      </title>
    </svg>
    <div
      className="bx--toast-notification__details"
    >
      <h3
        className="bx--toast-notification__title"
      >
        Experimental Component Notice
      </h3>
      <div
        className="bx--toast-notification__subtitle"
      >
        <span>
          SimpleIconDropdown
           is an
           
          <a
            href="https://github.com/carbon-design-system/carbon-addons-iot-react/blob/next/packages/react/docs/guides/experimental-components.md"
          >
            experimental component
          </a>
           
          and may have changing APIs with no major version bump and/or insufficient test coverage. Use of this component in production is discouraged.
        </span>
      </div>
    </div>
  </div>
</div>
`;
